--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -7,9 +7,13 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            
+            <button class="btn-sm rounded-pill startrix-button">Create Ideas</button>
+            
         </div>
-
+        
+           
+        
         <article class="content px-4">
             @Body
         </article>
